--- a/ui/index.html
+++ b/ui/index.html
@@ -36,7 +36,11 @@ $(document).ready(function(){
 
             for (var j = 0; j < col.length; j++) {
                 var tabCell = tr.insertCell(-1);
-                tabCell.innerHTML = data[i][col[j]];
+                if (col[j] == 'imagePath') {
+                    tabCell.innerHTML = '<a href="' + data[i][col[j]] + '" target="_blank">image</a>'
+                } else {
+                    tabCell.innerHTML = data[i][col[j]];
+                }
             }
         }
 
@@ -50,6 +54,7 @@ $(document).ready(function(){
 </head>
 <body>
 <app-top-bar><h1>Theme Park Manager</h1></app-top-bar>
+<img src="images/overview.jpg"/>
 <div class="container">
     <button>Get rides!</button>
 </div>
