Serve ui from api application.

--- a/theme-park-manager-full/ui/src/main/resources/static/index.html
+++ b/theme-park-manager-full/ui/src/main/resources/static/index.html
@@ -54,7 +54,7 @@ $(document).ready(function(){
 </head>
 <body>
 <app-top-bar><h1>Theme Park Manager</h1></app-top-bar>
-<img src="images/overview.jpg" width="600px"/>
+<img src="../../../../images/overview.jpg" width="600px"/>
 <div class="container">
     <h2>Grelephant's Wonder World is in your hands!</h2>
 </div>
